3. Отсортировать департаменты [#34352]